--- a/style.css
+++ b/style.css
@@ -7,15 +7,35 @@ body {
   font-size: 12px;
   margin: 20px 0 40px 0;
 }
-
-.main__form {
-  height: 240px;
-  border-bottom: 1px solid #dfdcdc;
-}
 img {
   width: 100%;
 }
-.input-name {
+.login-form {
+  height: 240px;
+  border-bottom: 1px solid #dfdcdc;
+}
+.login-form__block {
+  margin-bottom: 20px;
+  border-bottom: 1px solid #bdbaba;
+}
+#input-password {
+  border-right-width: 32px;
+}
+.login-form__input {
+  box-sizing: border-box;
+  width: 100%;
+  border: 10px solid #f2f4f8;
+  background-color: #f2f4f8;
+  cursor: text;
+  padding: 10px 6px;
+  height: 20px;
+  margin-top: 6px;
+}
+.login-form__input:focus {
+  outline: none;
+  background-color: #e7eefc;
+}
+.login-form__input-title {
   color: #767676;
   font-size: 14px;
 }
@@ -23,80 +43,51 @@ img {
   color: #fff;
   padding-right: 10px;
 }
-
-.button {
+.login-form__password-link {
+  color: #3000dc;
+  text-decoration: none;
+  cursor: pointer;
+  float: right;
+}
+.login-form__password-link:hover {
+  color: #892ebe;
+}
+.login-form__button {
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
   background-color: #3000dc;
-  height: 40px;
+  height: 50px;
   width: 100%;
   border: none;
   margin-top: 20px;
   cursor: pointer;
 }
-.button-name {
+.login-form__button-name {
   color: #fff;
   text-align: left;
   padding-left: 10px;
 }
-.password-block-name {
-  display: flex;
-  justify-content: space-between;
-  padding: 22px 0 6px 0;
-}
-.password-block__link {
-  color: #3000dc;
-  text-decoration: none;
-  cursor: pointer;
-}
-.password-block__link:hover {
-  color: #892ebe;
-}
-.input_value {
-  box-sizing: border-box;
-  width: 100%;
-  height: 20px;
-  border: 10px solid #f2f4f8;
-  background-color: #f2f4f8;
-  cursor: text;
-  padding: 10px 6px;
-}
+
 .footer {
   color: #767676;
   font-size: 12px;
 }
-.push {
-  margin-top: 50px;
-}
+
 .push,
 .footer {
   height: 50px;
 }
-.login-block__input .input-name {
-  padding-bottom: 6px;
-}
-.password-block__input {
-  width: 100%;
-  height: 40px;
-  border-bottom: 1px solid #bdbaba;
-  background-color: #f2f4f8;
-  display: flex;
-  /* justify-content: space-between; */
-  align-items: center;
-  /* padding-right: 6px; */
-}
-.input_value:focus {
-  outline: none;
-  background-color: #e7eefc;
-}
 
 .far {
-  margin-right: 16px;
   color: #767676;
   font-size: 14px;
   cursor: pointer;
+  float: right;
+  position: relative;
+  top: -27px;
+  padding-right: 16px;
 }
 
 .fas:hover,
@@ -108,12 +99,16 @@ img {
     font-size: 10px;
     margin: 20px 0 40px 0;
   }
-  .input-name,
-  .input_value {
+  .login-form__input-title,
+  .login-form__input {
     font-size: 12px;
   }
   .password-block__link {
     font-size: 14px;
+  }
+  .login-form__input-title,
+  .password-block__link {
+    padding-bottom: 10px;
   }
   body {
     width: 40%;
@@ -131,11 +126,11 @@ img {
     font-size: 8px;
     margin: 20px 0 30px 0;
   }
-  .input-name,
-  .input_value {
+  .login-form__input-title,
+  .login-form__input {
     font-size: 10px;
   }
-  .password-block__link {
+  .login-form__password-link {
     font-size: 12px;
   }
   /* .footer {
