--- a/style.css
+++ b/style.css
@@ -69,7 +69,9 @@ img {
   text-align: left;
   padding-left: 10px;
 }
-
+.push {
+  height: 50px;
+}
 .footer {
   color: #767676;
   font-size: 12px;
