--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   width: 30%;
   margin: 0 auto;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .header {
   font-family: Arial, Helvetica, sans-serif;
@@ -37,7 +38,7 @@ img {
 }
 .login-form__input-title {
   color: #767676;
-  font-size: 14px;
+  font-size: 12px;
 }
 .fa-arrow-right {
   color: #fff;
@@ -48,6 +49,7 @@ img {
   text-decoration: none;
   cursor: pointer;
   float: right;
+  font-size: 14px;
 }
 .login-form__password-link:hover {
   color: #892ebe;
@@ -101,10 +103,10 @@ img {
   }
   .login-form__input-title,
   .login-form__input {
-    font-size: 12px;
+    font-size: 10px;
   }
   .login-form__password-link {
-    font-size: 14px;
+    font-size: 12px;
   }
   .login-form__button-name {
     font-size: 12px;
@@ -137,9 +139,4 @@ img {
   .login-form__button-name {
     font-size: 11px;
   }
-  /* .footer {
-    color: #767676;
-    font-size: 10px;
-    margin: 50px 0 0 0;
-  } */
 }
